# swagger/reference/Swagger.yaml
@@ -2108,6 +2108,41 @@ paths:
       tags: []
       responses: {}
       operationId: get-recruit-history-user_id
+  /search/skill:
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses: {}
+      operationId: get-recruits-search
+    post:
+      summary: ''
+      operationId: post-recruits-search
+      responses:
+        '200':
+          description: OK
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              minItems: 4
+              maxItems: 5
+              items:
+                type: object
+                minProperties: 1
+                maxProperties: 1
+                properties:
+                  id:
+                    type: integer
+                    format: int32
+                    minimum: 1
+                    maximum: 10
+                    multipleOf: 1
+                    deprecated: true
+                  name:
+                    type: string
+        description: ''
+    parameters: []
 components:
   schemas:
     User:
